deployment/guestbook-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-frontend
  namespace: guestbook
spec:
  type: ClusterIP
  selector:
    app: guestbook-frontend
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
