deployment/guestbook-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guestbook-frontend-ingress
  namespace: guestbook
spec:
  rules:
  - host: gbingress.apps.xxxxx.clusters.xxxxxxxxxx.tld
    http:
      paths:
      - backend:
          service:
            name: guestbook-frontend
            port:
              number: 8080
        path: /
        pathType: Prefix
